# hexapod

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  HARDWARE.md  MAIN_FLOW_MODEL.md  PLAN.md  README.md  plan.md  setupscript
hexapod-client/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  command_dispatch.cpp  command_dispatch_internal.hpp  command_router.cpp  command_router.hpp  firmware_boot.cpp  firmware_context.cpp  firmware_context.hpp  hexapod-client.cpp  hexapod-client.hpp  motion_commands.cpp  payload_decode.hpp  power_commands.cpp  sensing_commands.cpp  serialCommsClient.cpp  serialCommsClient.hpp
hexapod-client/tests/: test_command_dispatch.cpp  test_command_handlers.cpp  test_command_router.cpp
hexapod-opengl-visualiser/: CMakeLists.txt  README.md  imgui.ini
hexapod-opengl-visualiser/src/: main.cpp  visualiser_frame_math.hpp
hexapod-opengl-visualiser/tests/: test_body_pose_transform.cpp  test_camera.cpp  test_json_extract.cpp  test_json_packets.cpp  test_kinematics.cpp  test_mat4.cpp  test_scene_bounds.cpp  test_server_visualiser_roundtrip.cpp  test_visualiser_frame_math.cpp  test_viz_binary.cpp
hexapod-opengl-visualiser/tools/: insert_debug_cb.py  patch_legacy_main.py  splice_draw_block.py
hexapod-physics-sim/: .gitignore  CMakeLists.txt  DEVELOPER_ROLLOUT_POLICY.md  Makefile  README.md  imgui.ini
hexapod-physics-sim/build-bench/: Makefile  hexapod-physics-sim
hexapod-physics-sim/build-check/: Makefile  compare_servo_stride_long  hex_diag  hexapod-physics-sim  record_hexapod_stability  regression_scene_suite  stability_git.inc  sweep_hexapod_knobs  test_block2_solver  test_block4_solver  test_broadphase_dynamic_tree  test_compound_shapes  test_convex_dispatch_equivalence  test_cylinder_collision  test_gjk_regression  test_hexapod_live  test_hexapod_live_pose_hold  test_hexapod_zero_g  test_island_ordering  test_joint_creation_refactor  test_process_resource_monitoring  test_regression_step  test_serve_ipc  test_servo_chain_stability  test_servo_joint_target  test_servo_regression_matrix  test_servo_stability_regression  test_servo_visual_presets_json  test_state_correction_protocol  test_terrain_patch  test_terrain_patch_scene_json  test_terrain_scroll  test_unit_math  test_world_resource_monitoring  test_world_topology_snapshot  world_resource_profile_oneoff
hexapod-physics-sim/build-check-worktree/: Makefile  hex_diag  hexapod-physics-sim  regression_scene_suite  test_block2_solver  test_block4_solver  test_broadphase_dynamic_tree  test_compound_shapes  test_convex_dispatch_equivalence  test_cylinder_collision  test_gjk_regression  test_hexapod_live  test_hexapod_live_pose_hold  test_hexapod_zero_g  test_island_ordering  test_joint_creation_refactor  test_regression_step  test_serve_ipc  test_servo_chain_stability  test_servo_joint_target  test_servo_regression_matrix  test_servo_stability_regression  test_servo_visual_presets_json  test_state_correction_protocol  test_terrain_patch  test_terrain_patch_scene_json  test_terrain_scroll  test_unit_math
hexapod-physics-sim/demo/: frame_sink.hpp  scenes.hpp
hexapod-physics-sim/include/: minphys3d.hpp
hexapod-physics-sim/profiling/: BASELINE_README.txt  LATEST_hexapod_stability_baseline_40iter_2substep_stride3.txt  anchor_fastpath_ab_report_2026-04-27.txt  anchor_scalar_fallback_ab_2026-04-27.txt  hexapod_anchor_fastpath_sweep_2026-04-27.csv  hexapod_anchor_fastpath_sweep_repeat_2026-04-27.csv  hexapod_gains_sweep_20iter_1substep_2026-04-27.txt  hexapod_knob_sweep_2026-04-27.csv  hexapod_stability_baseline_40iter_2substep_2026-04-27.txt  hexapod_stability_baseline_40iter_2substep_anchor_fastpath_tuned_2026-04-27.txt  hexapod_stability_baseline_40iter_2substep_stride2_2026-04-27.txt  hexapod_stability_baseline_80iter_1substep_2026-04-26.txt  hexapod_stability_baseline_80iter_3substep_2026-04-26.txt  hexapod_stability_baseline_iter40_2026-04-26.txt  hexapod_stability_baseline_iter80_2026-04-26.txt  hexapod_stability_compare_iter80_vs_iter40_2026-04-26.txt  hexapod_stability_tune_gains_A_2026-04-27.txt  hexapod_stability_tune_gains_B_2026-04-27.txt  hexapod_stability_tune_gains_C_2026-04-27.txt  hexapod_stability_tune_gains_D_2026-04-27.txt  hexapod_stability_tune_gains_E_2026-04-27.txt  plan_progress_status_2026-04-27.txt  re_eval_20x1_vs_40x2_2026-04-27.txt  resource_compare_iter80_vs_iter40_2026-04-26.txt  resource_profile_hexapod_18sec_2026-04-26.txt  resource_profile_hexapod_2026-04-26.txt  resource_profile_hexapod_27sec_nested_2026-04-26.txt  resource_profile_hexapod_40iter_2substep_2026-04-27.txt  resource_profile_hexapod_40iter_2substep_anchor_fastpath_tuned_2026-04-27.txt  resource_profile_hexapod_40iter_2substep_stride2_2026-04-27.txt  resource_profile_hexapod_40iter_2substep_stride3_2026-04-27.txt  resource_profile_hexapod_80iter_1substep_2026-04-26.txt  resource_profile_hexapod_80iter_3substep_2026-04-26.txt  resource_profile_hexapod_oneoff_iter40_2026-04-26.txt  resource_profile_split_2026-04-27.txt  resource_substeps_80iter_compare_2026-04-26.txt  servojoint_opt_A_math_resource_2026-04-27.txt  servojoint_opt_A_math_stability_2026-04-27.txt  servojoint_opt_B_earlyout_resource_2026-04-27.txt  servojoint_opt_B_earlyout_sharedangle_resource_2026-04-27.txt  (+9 more)
hexapod-physics-sim/scripts/: extract_world_privates_v2.py
hexapod-physics-sim/src/: main.cpp
hexapod-physics-sim/tests/: FRICTION_COHERENCE_NOTES.md  block_solver_metrics.json  compare_servo_stride_long.cpp  hex_diag.cpp  record_hexapod_stability.cpp  regression_scene_suite.cpp  solver_validation_helpers.hpp  sweep_hexapod_knobs.cpp  test_articulation.cpp  test_articulation_impulse_response_decay.cpp  test_block2_solver.cpp  test_block4_solver.cpp  test_broadphase_dynamic_tree.cpp  test_compound_shapes.cpp  test_constraint_solver_extreme_mass_ratio_stress.cpp  test_convex_dispatch_equivalence.cpp  test_gjk_regression.cpp  (+41 more)
hexapod-server/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  config.physics-sim-test-harness.txt  config.physics-sim-wsl.txt  config.physics-sim.txt  config.sim.txt  config.txt  makefile
(+923 files in other folders)
